-
Bug
-
Resolution: Done
-
P2: Important
-
6.2
-
dfdc5cba89f8df2a8a9dd5a54072734f212f8772 (qt/qtdeclarative/dev) fa9676178301a8ffdf0627444e87a5940127a965 (qt/qtdeclarative/6.2)
In the attached example, running qmllint on test.qml will complain about A not being a type. However, test.qml does (in the runtime) an implicit import, which finds the qmldir, and thus makes A available.
qmllint should handle the implicit import in the same way.
| For Gerrit Dashboard: QTBUG-95656 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 364011,9 | qmllint: Process qmldir when importing directories | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 364481,2 | qmllint: Process qmldir when importing directories | 6.2 | qt/qtdeclarative | Status: MERGED | +2 | 0 |