qmllint: Process qmldir when importing directories

Now qmllint also imports qmldirs when importing directories (also applies to implicit importing of the current directory).
This matches the behavior of qml itself now.

Pick-to: 6.2
Fixes: QTBUG-95656
Change-Id: I58c3b8c13c1d06e3d146c9de298a3e02d8dffa28
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>