tests/auto/qml/qmllint/data/Things/LintDirectly.qml
@@ -1,0 +1,4 @@
+Pane {
+    property var thing: NotPartOfThings {}
+    property var something: Something {}
+}
